Bug 445968 – Cannot obtain background-color of objects that do not have a color explicitly assigned, r=aaronlev, sr=roc